--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
           <h2>HAPPY</h2><!-- Level 2 'HAPPY' Header -->
 
-          <h4>| FROM DESPICABLE ME 2 |</h4><!-- Level 4 '| FROM DESPICABLE ME...' Header -->
+          <h4> &nbsp;&nbsp;| FROM DESPICABLE ME 2 | &nbsp;&nbsp;</h4><!-- Level 4 '| FROM DESPICABLE ME...' Header -->
 
         </div>
       </div>
 
       <div id="back" class="album">
 
-        <h3>| FROM DESPICABLE ME 2 |</h3><!-- Level 3 '| FROM DESPICABLE ME...' Header -->
+        <h3> &nbsp;&nbsp;| FROM DESPICABLE ME 2 | &nbsp;&nbsp;</h3><!-- Level 3 '| FROM DESPICABLE ME...' Header -->
 
         <h1>HAPPY</h1><!-- Level 1 'HAPPY' Header -->
 
